Alignment issues fixes in resume

--- a/css/style-light.css
+++ b/css/style-light.css
@@ -457,7 +457,7 @@ hr {
   .job {
     flex-direction: column;
     align-items: center;
-    padding: 24px 16px;
+    padding: 24px;
     margin:16px;
   }
 }
@@ -485,7 +485,6 @@ top: -12px;
 .job .detail {
   color: rgba(13, 32, 63, .64);
   width:60%;
-  padding-left:24px;
 }
 @media (max-width:992px) {
   .job .detail {
@@ -1117,7 +1116,66 @@ nav {
 }
 
 
-/* Avatars */
+
+
+
+/* Experimental Avatar styles */
+/* Shared Avatar Styles */
+.avtr {
+  margin: 0 auto;
+  background-size: 160px;
+  background-repeat: no-repeat;
+  margin-bottom: 36px;
+  border-radius: 50%;
+  height: 72px;
+  width: 72px;
+  background-size: 72px;
+  background-repeat: no-repeat;  
+  animation: none; /* Default: no animation */
+}
+
+@media (max-width: 992px) {
+  .avtr {
+    padding-bottom: 24px;
+  }
+}
+
+@media (max-width: 767px) {
+  .avtr {
+    padding-bottom: 24px;
+  }
+}
+
+.avtr-bulent {
+  background-image: url("../img/avatar/avtr.bulent.400@2x.jpg");
+  background-size: 200px;
+  height: 200px;
+  width: 200px;
+}
+
+
+.avtr-bulent:hover {
+  animation: bounce 1s ease-in-out forwards;
+}
+
+
+@keyframes bounce {
+  0%, 100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+}
+
+
+
+
+
+
+
+
+/* Avatars 
 .avtr {
   margin:0 auto;
   background-size: 160px;
@@ -1127,7 +1185,7 @@ nav {
   height: 72px;
   width: 72px;
   background-size: 72px;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat;  
 }
 @media (max-width: 992px) {
   .avtr {
@@ -1141,9 +1199,18 @@ nav {
   }
 
 
+
   .avtr-bulent {
     background-image: url("../img/avatar/avtr.bulent.400@2x.jpg");
+    background-size: 200px;
+    height: 200px;
+    width: 200px;
   }
+*/
+
+
+
+
   .avtr-tobias {
     background-image: url("../img/avatar/avtr.tobias.400@2x.jpg");
   }
